{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 473,
  "lineage": "c2f2d7b1-c418-18e1-76e3-a256131c6860",
  "resources": [
    {
      "module": "module.scannerfleet_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933421410557:internet-gateway/igw-09312f02a80519041",
            "id": "igw-09312f02a80519041",
            "owner_id": "933421410557",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-08d1a4b8c7402a052"
          },
          "dependencies": [
            "module.scannerfleet_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.scannerfleet_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-043750bd83a77adcb",
            "owner_id": "933421410557",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09312f02a80519041",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-08d1a4b8c7402a052"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.scannerfleet_vpc.aws_internet_gateway.gw",
            "module.scannerfleet_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.scannerfleet_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933421410557:security-group/sg-0270506d8c051a34c",
            "description": "Security group for vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0270506d8c051a34c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "127.0.0.1/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "scannerfleetsc",
            "name_prefix": "",
            "owner_id": "933421410557",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-08d1a4b8c7402a052"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.scannerfleet_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.scannerfleet_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933421410557:subnet/subnet-09e201eff3905b2c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09e201eff3905b2c2",
            "map_public_ip_on_launch": false,
            "owner_id": "933421410557",
            "vpc_id": "vpc-08d1a4b8c7402a052"
          },
          "dependencies": [
            "module.scannerfleet_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.scannerfleet_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933421410557:subnet/subnet-047a766de6a919846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-047a766de6a919846",
            "map_public_ip_on_launch": false,
            "owner_id": "933421410557",
            "vpc_id": "vpc-08d1a4b8c7402a052"
          },
          "dependencies": [
            "module.scannerfleet_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.scannerfleet_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933421410557:subnet/subnet-0deb82ba812d8f3f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0deb82ba812d8f3f9",
            "map_public_ip_on_launch": false,
            "owner_id": "933421410557",
            "vpc_id": "vpc-08d1a4b8c7402a052"
          },
          "dependencies": [
            "module.scannerfleet_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.scannerfleet_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933421410557:vpc/vpc-08d1a4b8c7402a052",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ceda485ff0cd410",
            "default_route_table_id": "rtb-043750bd83a77adcb",
            "default_security_group_id": "sg-08a6a17cbd477d0ea",
            "dhcp_options_id": "dopt-69d41a12",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08d1a4b8c7402a052",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-043750bd83a77adcb",
            "owner_id": "933421410557"
          }
        }
      ]
    }
  ]
}